@@ -421,9 +421,12 @@ Fixed Workspace link spacing and the opening/closing of the navigation in IE6.
 Fixed rendering issues with the action icons on the workspace/desk pages in
 IE6/7. [Adrian Yee]
 
+=item *
+
+Xinha works again. Reported by John Durkin and Matt Rolf (Bug #1429). [David]
+
 =back
 
-=======
 =head1 VERSION 1.11.1 (2008-10-03)
 
 =head2 Improvements
